# fft-multiplication

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan  input  input2  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
fft/: Makefile  Makefile.am  Makefile.in  def.c  def.h  libfft.la  libfft_la-def.lo  libfft_la-fft.lo
fft/.deps/: libfft_la-def.Plo  libfft_la-fft.Plo
fft/.libs/: libfft.lai  libfft.so.0.0.0
src/: Makefile  Makefile.am  Makefile.in  def.h  fastfourier  fft  fft.c  fft.h  libfft_la-main.lo  main.c
src/.deps/: def.Po  fastfourier-main.Po  fft-def.Po  fft-fft.Po  fft-main.Po  fft.Po  libfft_la-def.Plo  libfft_la-main.Plo  main.Po
src/.libs/: fastfourier  libfft.so.0.0.0  lt-fastfourier
tests/: Makefile  Makefile.am  Makefile.in  check_fft  check_fft.c
tests/.deps/: check_fft-check_fft.Po
tests/.libs/: check_fft  lt-check_fft
